# lore-nixxed

./: .gitignore  Cargo.toml  flake.nix  result  result-1  result-2  result-3  result-loreserver
docs/how-to/: use-nixos-flake.md
docs/reference/: README.md  lore-server-config.md  nix-flake.md
lore-auth-bridge/: Cargo.toml  build.rs
lore-auth-bridge/src/: lib.rs  main.rs
lore-aws/src/store/: immutable_store.rs
lore-capi/: lore.h
lore-client/src/cli/commands/: repository.rs
lore-revision/src/: metadata.rs  state.rs
lore-revision/src/repository/: status.rs
lore-server/: Cargo.toml
lore-server/src/: lib.rs  server.rs
lore-server/src/grpc/: mod.rs
lore-server/src/grpc/handlers/: branch_metadata_set.rs  branch_push.rs  revision_describe.rs  revision_diff.rs  revision_list.rs  revision_state_history.rs
lore-server/src/grpc/revision/v1/: revision_list.rs
lore-server/src/grpc/thinclient/v1/: helpers.rs  revision_diff.rs  revision_info.rs
lore-server/src/hooks/: registry.rs
lore-server/src/plugins/: aws.rs  hashicorp.rs  registry.rs
lore-storage/src/: lib.rs  read.rs  write.rs
nix/lib/: toml.nix
nix/modules/: types.nix
nix/modules/programs/: lore.nix
nix/modules/services/: lore-auth-bridge.nix  lore-server.nix
nix/tests/: default.nix
