[package]
name = "lore-auth-bridge"
edition = "2024"
version.workspace = true
build = "build.rs"

[[bin]]
name = "lore-auth-bridge"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
jsonwebtoken = { workspace = true }
prost = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
ring = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["serde"] }

[build-dependencies]
tonic-prost-build = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
